welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:3: error: not found: value ab
  if( ((30<=a)&&(a<=40)&&(30<=b)&&(b<=40)) || ((40<=a)&&(a<=50)&&(40<=ab)&&(b<=50)) )
                                                                      ^